--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,10 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="text_primary_dark">#FF000000</color>
+    <color name="text_background">#A7A7A7A7</color>
+
+    <color name="text_secondary_dark">#99000000</color>
+    <color name="text_content">#E2E2E2E2</color>
 </resources>
